--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
             <p>Criminal Case es un juego de investigación criminal donde los jugadores resuelven casos de asesinato encontrando pistas, interrogando sospechosos y analizando evidencia.</p>
         </section>
         
-       
+        <section class="juego">
+            <h2>Tetris</h2>
+            <img src="https://upload.wikimedia.org/wikipedia/en/3/3b/Tetris_NES_cover.png" alt="Tetris">
+            <p>Tetris es un videojuego de rompecabezas clásico donde los jugadores deben encajar piezas de diferentes formas para completar líneas y evitar que la pantalla se llene.</p>
+        </section>
+    </main>
 </body>
 </html>
