--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <main>
         <section class="juego">
             <h2>Mario Kart</h2>
-            <img src="https://upload.wikimedia.org/wikipedia/en/thumb/d/d2/Mario_Kart_8_Deluxe.png/220px-Mario_Kart_8_Deluxe.png" alt="Mario Kart">
+            <img src="https://sm.ign.com/t/ign_latam/news/l/lego-mario/lego-mario-kart-sets-announced-for-2025-in-celebration-of-ma_gx14.1280.jpg" alt="Mario Kart">
             <p>Mario Kart es una serie de videojuegos de carreras desarrollada y publicada por Nintendo, donde los personajes del universo de Mario compiten en intensas carreras con ítems y obstáculos.</p>
         </section>
         
