--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         
         <section class="juego">
             <h2>Criminal Case</h2>
-            <img src="https://upload.wikimedia.org/wikipedia/en/d/d8/Criminal_Case_logo.jpg" alt="Criminal Case">
+            <img src="hhttps://store-images.s-microsoft.com/image/apps.41589.14509421657493931.702accda-c47b-4b8d-9463-24cef5037f64.849b43d0-0dcc-4e90-a7f0-3cdd10755633?mode=scale&q=90&h=1080&w=1920" alt="Criminal Case">
             <p>Criminal Case es un juego de investigación criminal donde los jugadores resuelven casos de asesinato encontrando pistas, interrogando sospechosos y analizando evidencia.</p>
         </section>
         
