--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         
         <section class="juego">
             <h2>Tetris</h2>
-            <img src="https://upload.wikimedia.org/wikipedia/en/3/3b/Tetris_NES_cover.png" alt="Tetris">
+            <img src="https://play-lh.googleusercontent.com/gELFf6cqNm0gnW3gy3bV0rFS2bVOPiJCicSX7epCbOTkuCbZ1cMBUOFijq85DHTwZg=w526-h296-rw" alt="Tetris">
             <p>Tetris es un videojuego de rompecabezas clásico donde los jugadores deben encajar piezas de diferentes formas para completar líneas y evitar que la pantalla se llene.</p>
         </section>
     </main>
